remove the contact form Fix navbar CSS on smaller devices

--- a/src/www/main.css
+++ b/src/www/main.css
@@ -58,6 +58,9 @@ a {
     color: black!important;
 }
 @media screen and (max-width: 876px) {
+    .navbar-menu-items{
+        font-size: 60%;
+    }
     .cardTest{
         width: 100%;
     }
@@ -202,4 +205,7 @@ a {
 }
 .white{
     color: white;
+}
+.fa-envelope{
+    /*font-size: 10%;*/
 }
